--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: question, local: true) do |form| %>
+<%= form_with(model:[:admin, question]) do |form| %>
   <% if question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(question.errors.count, "error") %> prohibited this question from being saved:</h2>
@@ -10,6 +10,15 @@
       </ul>
     </div>
   <% end %>
+  <div class="form-group">
+    <%= form.label(:short_answer_placeholder, "Short Answer Placeholder") %>
+    <%= form.text_field(:short_answer_placeholder, class: 'form-control') %>
+  </div>
+  <div class="form-group">
+    <%= form.label(:question, "Question") %>
+    <%= form.text_area(:question, class: 'form-control') %>
+  </div>
+
 
   <div class="actions">
     <%= form.submit %>
