--- a/app/views/answers/index.html.erb
+++ b/app/views/answers/index.html.erb
@@ -23,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Response', new_question_answer_path(@question) %>
+<%= link_to 'New Response', new_question_answer_path %>
